# farconf

./: .gitignore  README.md  pyproject.toml
.circleci/: config.yml
farconf/: __init__.py  cli.py  config_ops.py  serialize.py
tests/: test_cli.py  test_config_ops.py  test_integration.py  test_serialize.py
tests/integration/: class_defs.py  instances.py  non_abstract.yaml  non_abstract_alone.yaml  one.yaml  onemaybe_no.yaml  subone.yaml  subtwo.yaml
